margin and need to fix alignment

--- a/style.css
+++ b/style.css
@@ -26,8 +26,10 @@ p{
 }
 
 ul{
-    float: right;
+    float: justify;
     color: tan;
+    margin: 40px;
+
 }
 
 .col-3{
